rnsc/test_data/integration/error/parser/type_hints/int/not_i32.rns
.class @int identifier
.super java/lang/Object